# openenv-dataclean

./: .gitignore  Dockerfile  Open_ENV_codebase_digest.txt  README.md  baseline.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  tasks.json  test_env.py
server/: app.py
src/: __init__.py  env.py  graders.py  models.py  rewards.py
src/tasks/: __init__.py  easy.py  hard.py  medium.py
