[project]
name = "openenv-dataclean"
version = "1.0.0"
description = "A production-grade OpenEnv environment for data cleaning and validation."
authors = [
    { name = "OpenEnv Hackathon Submission" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "openai>=1.57.0",
    "pyyaml>=6.0.2",
    "httpx>=0.28.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
openenv-server = "server.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
